package common.models.messages;

public interface MessageBase {
	public int getCode();
}
